[package]
name = "anonchan"
version = "0.1.0"
edition = "2024"
authors = ["NessajCN <ksnessaj@hotmail.com>"]
repository = "https://github.com/NessajCN/anonchan"

[dependencies]
socketioxide = { version = "0.16", features = [
    "extensions",
    "state",
    "tracing",
] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
mongodb = "3.2.1"
jsonwebtoken = "9.3"
bcrypt = "0.17.0"
email_address = "0.2.9"
base64 = "0.22.1"
